sbi-manifests/sbi-cms-platform-java-connect/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-platform-java-connect
  namespace: sbi
  labels:
    app: sbi-cms-platform-java-connect
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-platform-java-connect
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-platform-java-connect
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 3353f88aae48a63acc9318a0d186767d54577c0e6ff95f5de6bafa0a168e4431
    spec:
      serviceAccountName: sbi-cms-platform-java-connect-sa
      volumes:
      containers:
        - name: sbi-cms-platform-java-connect
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-platform-java-connect:sbi-uat.v19
          volumeMounts:
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
