sbi-manifests/sbi-cms-platform-java-connect/sbi-cms/templates/service.yaml
---
# Source: sbi-cms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbi-cms-platform-java-connect
  namespace: sbi
  labels:
    app: sbi-cms-platform-java-connect
  annotations: 
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080-8080'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: 8080-8080
  selector:
    app: sbi-cms-platform-java-connect
  type: ClusterIP
